--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
     <div class="searchbox">
       <div class="headtxt">Search for the city</div>
-      <form action="Weather.html" class="form">
+      <form action="weather.html" class="form">
         <input type="text" placeholder="Enter City..." id="citybox" />
         <input
           type="submit"
